--- a/TSchedule2/TSchedule2.UI/MainForm.resx
+++ b/TSchedule2/TSchedule2.UI/MainForm.resx
@@ -117,26 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="problem_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\problem_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solution_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solution_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="solver_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solver_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StatusInvalid_32x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StatusInvalid_32x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StatusOK_32x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StatusOK_32x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="StatusWarning_31x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StatusWarning_31x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="train_icon_62695_dDQ_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\train_icon_62695_dDQ_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="openJsonFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>150, 16</value>
+  </metadata>
+  <metadata name="saveJsonFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>339, 16</value>
+  </metadata>
 </root>
